# frei0r-opencl

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenCL.cmake
src/: CMakeLists.txt  hello-opencl.c
